<resources>
    <string name="app_name">apprendezvous</string>
    <!-- Page 1 -->
    <string name="page_1_title">Sahti</string>
    <string name="page_1_subtitle">Medical App</string>

    <!-- Page 2 -->
    <string name="page_2_description">Votre Santé, Notre Priorité  Connectez-vous en Temps Réel</string>
    <string name="page_2_button">Commencer !</string>

    <!-- Page 3 -->
    <string name="page_3_title">Rendez-vous faciles</string>
    <string name="page_3_description">Réservez un rendez-vous en quelques clics, selon vos disponibilités. Trouvez un créneau qui vous convient.</string>
    <string name="page_3_button">Suivant</string>
    <string name="page_3_button2">Sauter</string>

    <!-- Page 4 -->
    <string name="page_4_title">Trouver un Médecin</string>
    <string name="page_4_description">Accédez rapidement à un répertoire de professionnels de santé. Trouvez un médecin près de chez vous ou choisissez un spécialiste adapté à vos besoins.</string>
    <string name="page_4_button">Suivant</string>
    <string name="page_4_button2">Sauter</string>

    <!-- Page 5 -->
    <string name="page_5_title">Content de vous voir !</string>
    <string name="page_5_description">Remplir le formulaire avec vos informations</string>
    <string name="page_5_mail_input">Email</string>
    <string name="page_5_pwd_input">Mot de passe</string>
    <string name="page_5_button2">Mot de passe oublié</string>
    <string name="page_5_button3">Se connecter</string>
    <string name="page_5_button4">Vous n’avez pas un compte ? S\'inscrire !</string>

    <!-- Page 6 -->
    <string name="page_6_title">S\'inscrire en tant que</string>
    <string name="page_6_button2">Médecin</string>
    <string name="page_6_button1">Patient</string>

    <!-- Page 7 -->
    <string name="page_7_title">Médecin</string>
    <string name="page_7_subtitle">Rejoignez-nous pour commencer</string>
    <string name="page_7_subtitle2">Remplir le formulaire avec vos informations</string>
    <string name="page_7_name_input">Nom et Prénom</string>
    <string name="page_7_cin_input">CIN</string>
    <string name="page_7_specialite_input">Spécialité</string>
    <string name="page_7_tele_input">Telephone</string>
    <string name="page_7_mail_input">Email</string>
    <string name="page_7_pwd_input">Password</string>
    <string name="page_7_label">J\'accepte les conditions d\'utilisation et la politique de confidentialité</string>
    <string name="page_7_button">S\'inscrire</string>

    <!-- Page 8 -->
    <string name="page_8_title">Patient</string>
    <string name="page_8_subtitle">Rejoignez-nous pour commencer</string>
    <string name="page_8_subtitle2">Remplir le formulaire avec vos informations</string>
    <string name="page_8_name_input">Nom et Prénom</string>
    <string name="page_8_cin_input">CIN</string>
    <string name="page_8_naissance_input">Date de Naissance</string>
    <string name="page_8_tele_input">Telephone</string>
    <string name="page_8_mail_input">Email</string>
    <string name="page_8_pwd_input">Password</string>
    <string name="page_8_label">J\'accepte les conditions d\'utilisation et la politique de confidentialité</string>
    <string name="page_8_button">S\'inscrire</string>
    <string name="votre_sant_">
Votre Sant\u00c3\u00a9, Notre Priorit\u00c3\u00a9  Connectez-vous\nen Temps R\u00c3\u00a9el
</string>


    <string name="web_client_id">605809245485-pedev6k0iqhlemjp8if6v40sovnm6nh8.apps.googleusercontent.com</string>

    <string name="prompt_specialites">Choisissez vos spécialités</string>
</resources>